Fix Double Scrollbar if modal open

--- a/app/css/scss/_costome.scss
+++ b/app/css/scss/_costome.scss
@@ -308,3 +308,7 @@ h4 {
 .tac {
   text-align: center;
 }
+
+.modal-open .modal {
+  margin-right: -17px;
+}
